# FastApi_prod

./: README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_05_11_1438-3604fedfcbf0_create_products_table.py  2025_05_11_1457-cfb631c70870_create_users_table.py  2025_05_11_1510-4817d0c04bf6_create_posts_table.py  2025_05_11_1549-b7c9abfc65c3_create_profile_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: views.py
