[project]
name = "fastapi-prod"
version = "0.1.0"
description = ""
authors = [
    {name = "maksbolomoznov",email = "bolomozhnov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"
urllib3 = "<2"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "<2"

[tool.poetry]
package-mode = false